[FIX] mail: wider composer when editing message
In chat window, editing message composer is too narrow.

This commit fixes the issue as follow:
1. Reduce spacing in message and composer while editing a message
2. Move actions to bottom

closes odoo/odoo#178395

X-original-commit: c52e0060fd7ea67596a8548a04ba580e3a0879c8
Related: odoo/enterprise#69147

--- a/addons/mail/static/src/core/common/message.scss
+++ b/addons/mail/static/src/core/common/message.scss
@@ -73,6 +73,11 @@
     &:not(.o-note) {
         padding-left: (map-get($spacers, 2) + map-get($spacers, 3)) / 2;
         padding-right: (map-get($spacers, 2) + map-get($spacers, 3)) / 2;
+
+        .o-mail-Message.o-editing & {
+            padding-left: map-get($spacers, 1);
+            padding-right: map-get($spacers, 1);
+        }
     }
 
     & > p {
